# DjangoComments

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.admin.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
apps/accounts/: models.py  tests.py
apps/accounts/migrations/: 0001_initial.py
apps/blog/: access_policy.py  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py
apps/user/accounts/: __init__.py  admin.py  apps.py  channel.py  consumers.py  managers.py  models.py  signals.py  tests.py
apps/user/accounts/migrations/: 0001_initial.py
apps/user/accounts/templates/emails/: active_email.html
apps/user/authorisation/: access_policy.py  apps.py  serializers.py  tests.py  urls.py  validators.py  views.py
config/: asgi.py  routing.py  urls.py
config/settings/: base.py  development.py  production.py  testing.py
dockers/nginx/: Dockerfile  nginx.conf
dockers/python/: Dockerfile
scripts/: docker-entrypoint.sh
var/http-client/: post.http  user.http
